@@ -18,7 +18,7 @@
 .\" * This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
 .\" * KIND, either express or implied.
 .\" *
-.\" * $Id: curl.1,v 1.281 2009-11-27 23:51:05 bagder Exp $
+.\" * $Id: curl.1,v 1.282 2009-12-10 21:02:11 bagder Exp $
 .\" **************************************************************************
 .\"
 .TH curl 1 "28 November 2009" "Curl 7.20.0" "Curl Manual"
@@ -1079,7 +1079,7 @@ timestamp.
 If a transient error is returned when curl tries to perform a transfer, it
 will retry this number of times before giving up. Setting the number to 0
 makes curl do no retries (which is the default). Transient error means either:
-a timeout, an FTP 5xx response code or an HTTP 5xx response code.
+a timeout, an FTP 4xx response code or an HTTP 5xx response code.
 
 When curl is about to retry a transfer, it will first wait one second and then
 for all forthcoming retries it will double the waiting time until it reaches
