@@ -31,6 +31,7 @@ This release includes the following bugfixes:
  o TFTP BLKSIZE
  o Expect: 100-continue handling when set by the application
  o multi interface with OpenSSL read already freed memory when closing down
+ o --retry didn't do right for FTP transient errors
 
 This release includes the following known bugs:
 
@@ -42,6 +43,6 @@ advice from friends like these:
  Yang Tse, Kamil Dudka, Christian Schmitz, Constantine Sapuntzakis,
  Marco Maggi, Camille Moncelier, Claes Jakobsson, Kevin Baughman,
  Marc Kleine-Budde, Jad Chamcham, Bjorn Augustsson, David Byron,
- Markus Koetter, Chad Monroe, Martin Storsjo
+ Markus Koetter, Chad Monroe, Martin Storsjo, Siegfried Gyuricsko
 
         Thanks! (and sorry if I forgot to mention someone)
